# This is where your app's icons will be installed from.

# app.svg is the primary visible icon for your application, displayed in the dock, for instance. 
# devel.svg is the primary visible icon for your application as a development build, displayed in the dock, for instance. 

install_data(
    'app.svg',
    rename: '@0@.svg'.format(meson.project_name()),
    install_dir: get_option('datadir') / 'icons/hicolor/scalable/apps',
)